--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,10 @@
 {
-  "semi": false,
-  "singleQuote": true,
-  "arrowParens": "avoid"
+	"trailingComma": "all",
+	"printWidth": 100,
+	"bracketSpacing": true,
+	"bracketSameLine": false,
+	"singleQuote": true,
+	"useTabs": false,
+	"tabWidth": 2,
+	"semi": true
 }
