--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@reduxjs/toolkit": "^2.0.1",
     "expo": "~49.0.15",
     "expo-constants": "~14.4.2",
