--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "prepare": "husky install",
-    "prettier": "prettier --write .",
-    "eslint": "eslint ."
+    "eslint": "eslint --fix .",
+    "prettier": "prettier . -c --write "
   },
   "husky": {
     "hooks": {
@@ -40,6 +40,8 @@
     "@types/redux-persist": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "husky": "^8.0.0",
