--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@reduxjs/toolkit": "^2.0.1",
     "expo": "~49.0.15",
     "expo-constants": "~14.4.2",
@@ -30,6 +31,7 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^14.1.0",
     "react-redux": "^9.0.4",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.4"
