--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
+    "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
@@ -37,7 +38,7 @@
     "react-redux": "^9.0.4",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.4",
-    "toastify-react-native": "^4.0.0"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
