feat: register and login screen integrated

--- a/app.json
+++ b/app.json
@@ -14,7 +14,10 @@
     "scheme": "lerni-mobile",
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "config": {
+        "usesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
