--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-redux": "^9.0.4",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.4",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "expo-blur": "~12.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
