--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@reduxjs/toolkit": "^2.0.1",
     "expo": "~49.0.15",
+    "expo-blur": "~12.4.1",
     "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
@@ -33,6 +34,7 @@
     "polished": "^4.2.2",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-progress": "^5.0.1",
@@ -42,8 +44,7 @@
     "react-redux": "^9.0.4",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.4",
-    "yup": "^1.3.3",
-    "expo-blur": "~12.4.1"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
