--- a/package.json
+++ b/package.json
@@ -39,14 +39,15 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-progress": "^5.0.1",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "14.1.0",
     "react-redux": "^9.0.4",
+    "react-timer-hook": "^3.0.7",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.4",
-    "yup": "^1.3.3",
-    "react-native-reanimated": "~3.3.0"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
