--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
+    "start": "expo start",
     "start:clear-cache": "expo start -c",
     "android": "expo start --android",
     "ios": "expo start --ios",
