[LER-129] Add Appium tests setup

--- a/eas.json
+++ b/eas.json
@@ -1,5 +1,15 @@
 {
   "build": {
+    "test": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "android": {
+        "buildType": "apk"
+      },
+      "ios": {
+        "simulator": true
+      }
+    },
     "preview": {
       "distribution": "internal"
     }
