--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "prepare": "husky install",
     "eslint": "eslint --fix .",
     "prettier": "prettier . --write ",
-    "test": "npm run prettier && npm run eslint"
+    "format": "npm run prettier && npm run eslint",
+    "build:test:android": "eas build --profile test --platform android",
+    "build:test:ios": "eas build --profile test --platform ios",
+    "test:android": "mocha -r ts-node/register -r dotenv/config 'integration-tests/android/tests/*.ts' --timeout 0",
+    "test:ios": "mocha -r ts-node/register -r dotenv/config 'integration-tests/ios/tests/*.ts' --timeout 0",
+    "test": "mocha -r ts-node/register -r dotenv/config --timeout 0"
   },
   "husky": {
     "hooks": {
@@ -52,22 +57,25 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/mocha": "^10.0.6",
     "@types/react": "~18.2.14",
     "@types/react-native-keyboard-spacer": "^0.4.6",
     "@types/redux-persist": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@wdio/types": "^8.32.4",
+    "appium": "^2.5.1",
+    "appium-uiautomator2-driver": "^3.0.2",
+    "appium-xcuitest-driver": "^7.3.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "husky": "^8.0.0",
+    "mocha": "^10.3.0",
     "prettier": "^3.1.1",
-    "typescript": "^5.1.3"
-  },
-  "overrides": {
-    "metro": "0.76.0",
-    "metro-resolver": "0.76.0"
+    "typescript": "^5.1.3",
+    "webdriverio": "^8.33.1"
   },
   "private": true
 }
