--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-timer-hook": "^3.0.7",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.4",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "expo-navigation-bar": "~2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
